fix bugs articles

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,18 +1,19 @@
 {
+  "lang_file_format_error": "Format errors",
+  "lang_field_size_limit_exceeded": "File size limit exceeded",
   "lang_funds": "Funds",
   "lang_other": "Other",
   "lang_edit_articles": "Edit Articles",
   "lang_articles_details": "Articles Details",
   "Lang_there_is_no_change_in_the_notification": "There is no change in the notification",
   "lang_invalid_url": "Invalid URL",
-  "lang_please_choose_sitename": "Please choose sitename",
   "lang_must_have_at_least_one_security_code": "Must have at least 1 security code",
   "lang_update_articles_successfully": "Create articles successfully",
   "lang_update_articles_unsuccessfully": "Create articles unsuccessfully",
   "lang_create_articles_successfully": "Create articles successfully",
   "lang_create_articles_unsuccessfully": "Create articles unsuccessfully",
-  "lang_please_enter_security_code": "Please enter security code",
-  "lang_please_choose_security_type": "Please choose security type",
+  "lang_please_select_security_code": "Please select security code",
+  "lang_please_select_security_type": "Please select security type",
   "lang_please_choose_image": "Please choose image",
   "lang_please_enter_content": "Please enter content",
   "lang_please_select_schedule_time": "Please select schedule time",
@@ -64,8 +65,8 @@
   "lang_choose_file": "Choose File",
   "lang_enter_your_content": "Enter your content",
   "lang_custom": "Custom",
-  "lang_please_sign_in_iress": "Please sign in to select the Security Code",
-  "lang_title_fetch_report": "Please sign in to select the Security Code",
+  "lang_please_sign_in_to_select_security_code": "Please sign in to select the Security Code",
+  "lang_please_sign_in_to_fetch_report": "Please sign in to fetch report",
   "lang_created_time": "Created time",
   "lang_attachment": "Attachment",
   "lang_date_of_birth_invalid": "Date of Birth invalid",
