uppercase Template ID

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -77,7 +77,7 @@
   "lang_fetch_report": "Fetch Report",
   "lang_report_name": "Report Name",
   "lang_report_type": "Report Type",
-  "lang_template_id": "Template Id",
+  "lang_template_id": "Template ID",
   "lang_disabled": "Disabled",
   "lang_enabled": "Enabled",
   "lang_disabled_for_all": "Disabled for all",
