--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,4 +1,5 @@
 {
+  "lang_there_is_no_change_in_the_report_information": "There is no change in the report information",
   "lang_enter_expire": "Please enter expire",
   "lang_funds": "Funds",
   "lang_other": "Other",
