--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,4 +1,5 @@
 {
+  "lang_ok": "Ok",
   "lang_there_is_no_change_in_the_report_information": "There is no change in the report information",
   "lang_file_format_error": "Format errors",
   "lang_field_size_limit_exceeded": "File size limit exceeded",
