--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -294,6 +294,7 @@
   "lang_pin_not_match": "PIN did not match. Please try again",
   "lang_confirm_your_new_pin": "Confirm Your New PIN",
   "error_code_ERR_NETWORK": "Network Error",
+  "error_code_100001": "An unknown error has occurred. Please contact IRESS support",
   "error_code_100002": "An error occurred, please contact your administrator",
   "error_code_100003": "You have been logged out as you have lost your session",
   "error_code_INVALID_TIME": "Expiration time must be larger than schedule time",
