--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,4 +1,5 @@
 {
+  "ALL_SITES": "ALL SITES",
   "lang_preview_new_article": "Preview New Article",
   "lang_ok": "Ok",
   "lang_there_is_no_change_in_the_report_information": "There is no change in the report information",
