--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,4 +1,5 @@
 {
+  "lang_please_enter_your_iress_account": "Please enter your Iress account",
   "lang_there_is_no_change_in_the_article_information": "There is no change in the article information",
   "ALL_SITES": "ALL SITES",
   "lang_preview_new_article": "Preview New Article",
