--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,4 +1,5 @@
 {
+  "lang_enter_your_email_to_edit_article": "Enter your email to edit article",
   "lang_build_version": "Version 1.0-{{time}}",
   "lang_please_enter_your_iress_account": "Please enter your Iress account",
   "lang_there_is_no_change_in_the_article_information": "There is no change in the article information",
