--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,4 +1,5 @@
 {
+  "lang_noti_has_been_sent": "The notification has been sent. You are unable to edit this notification",
   "lang_edit_user": "Edit User",
   "lang_enter_your_email_to_edit_article": "Enter your email to edit article",
   "lang_build_version": "Version 1.0 - {{time}}",
