--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -314,7 +314,7 @@
   "error_code_INVALID_SEGMENTATION": "",
   "error_code_INVALID_NOTIFICATION": "",
   "error_code_INVALID_NOTIFICATION_STATUS": "",
-  "error_code_100004": "Incorrect password or user login. Please make sure your details are correct and try again",
+  "error_code_100004": "Incorrect Password or User Login. Please make sure your details are correct and try again",
   "error_code_100005": "Display the pop-up requires to enter 2FA code",
   "error_code_100006": "Your account has been deactivated. Please contact your administrator",
   "error_code_100007": "The 2FA code is incorrect",
