--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,4 +1,21 @@
 {
+  "lang_do_you_want_to_proceed": "Do you want to proceed?",
+  "lang_new_setting": "New Setting",
+  "lang_prev_settinge": "Prev. Setting",
+  "lang_setting_name": "Setting Name",
+  "lang_configuration_change": "Configuration Change",
+  "lang_bundle_id": "Bundle ID",
+  "lang_displays_portfolio_performance": "Displays Portfolio Performance values on mobile app using selected calculation",
+  "lang_portfolio_performance_indicator": "Portfolio Performance Indicator",
+  "lang_portfolio": "Portfolio",
+  "lang_configuration_management": "Configuration Management",
+  "lang_fetch_report_for_sitename": "Fetch report for Sitename “<0>{{sitename}}</0>”, do you want to continue?",
+  "lang_your_session_has_expired": "Your session has expired. Please login again.",
+  "lang_sitename_is_invalid": "Site Name is invalid",
+  "lang_session_is_about_to_expired": "Your session is about to expire after 15 minutes.<br/> Do you want to stay signed in?",
+  "error_code_900000": "An error occurred, please contact your administrator",
+  "error_dont_have_permission": "You don’t have permission to access to IRESS CMS. Please contact your advisor for more detail.",
+  "lang_sign_in_to_access_to_Iress_CMS_portal": "Click “Sign in” to access to Iress CMS portal",
   "lang_noti_has_been_sent": "The notification has been sent. You are unable to edit this notification",
   "lang_edit_user": "Edit User",
   "lang_enter_your_email_to_edit_article": "Enter your email to edit article",
