updte popup confirm email to user id

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -18,7 +18,7 @@
   "lang_sign_in_to_access_to_Iress_CMS_portal": "Click “Sign in” to access to Iress CMS portal",
   "lang_noti_has_been_sent": "The notification has been sent. You are unable to edit this notification",
   "lang_edit_user": "Edit User",
-  "lang_enter_your_email_to_edit_article": "Enter your email to edit article",
+  "lang_enter_your_email_to_edit_article": "Enter your User ID to edit article",
   "lang_build_version": "Version 1.0 - {{time}}",
   "lang_please_enter_your_iress_account": "Please enter your Iress account",
   "lang_there_is_no_change_in_the_article_information": "There is no change in the article information",
@@ -111,7 +111,7 @@
   "lang_enabled_for_all": "Enable for all",
   "lang_creating_pin_request_has_expired": "Creating PIN request has expired",
   "lang_url_require": "Please select URL",
-  "lang_describe_confirm_edit": "Enter your email to edit notification",
+  "lang_describe_confirm_edit": "Enter your User ID to edit notification",
   "lang_edit_notification": "Edit Notification",
   "lang_no_matching_records_found": "Sorry, no matching records found",
   "lang_notifications_details": "Notifications Details",
@@ -151,8 +151,8 @@
   "lang_edit_segment": "Edit segment",
   "lang_preview_create_new_user": "Preview Create New User",
   "lang_there_is_no_change_in_the_segment_information": "There is no change in the segment information",
-  "lang_confirm_edit_segment": "Enter your email to edit segment <0>{{segment}}</0>?",
-  "lang_confirm_edit_user": "Enter your email to edit user login <0>{{user}}</0>",
+  "lang_confirm_edit_segment": "Enter your User ID to edit segment <0>{{segment}}</0>?",
+  "lang_confirm_edit_user": "Enter your User ID to edit user login <0>{{user}}</0>",
   "lang_logout": "Logout",
   "lang_delete_notification_successfully": "Delete notification successfully",
   "lang_delete_notification_unsuccessfully": "Delete notification unsuccessfully",
@@ -191,6 +191,7 @@
   "lang_select_segment_subcriber": "Please select subscribers",
   "lang_create": "Create",
   "lang_email_did_not_match": "The confirmation email does not match the login email",
+  "lang_user_id_did_not_match": "The confirmation User ID does not match the login User ID",
   "lang_hide": "Hide",
   "lang_show_more": "Show more",
   "lang_number_of_subscribers": "Number of Subscribers",
@@ -237,9 +238,10 @@
   "lang_sort": "Sort",
   "lang_no_data": "No data",
   "lang_no_matching_record": "Sorry, no matching records found",
-  "lang_enter_your_email_to_edit_count_user_logins": "Enter your email to edit {{count}} user logins",
-  "lang_enter_your_email_to_edit_user_login": "Enter your email to edit user login",
+  "lang_enter_your_email_to_edit_count_user_logins": "Enter your User ID to edit {{count}} user logins",
+  "lang_enter_your_email_to_edit_user_login": "Enter your User ID to edit user login",
   "lang_your_email": "Your email",
+  "lang_user_id": "User ID ",
   "lang_save": "Save",
   "lang_confirm": "Confirm",
   "lang_cancel": "Cancel",
@@ -300,6 +302,7 @@
   "lang_email_invalid": "The email is invalid",
   "lang_email_required": "Email is required",
   "lang_plese_enter_email": "Please enter your email",
+  "lang_plese_enter_user_id": "Please enter your User ID",
   "lang_user_login_is_invalid": "User login is invalid",
   "lang_password_required": "Password is required",
   "lang_password_invalid": "Your password must include 8-25 characters and contain at least one lowercase, one capital letter and one number",
