--- a/src/locales/vn.json
+++ b/src/locales/vn.json
@@ -13,7 +13,7 @@
   "lang_segment_name_is_required": "Please enter segment name",
   "lang_edit_segment": "EDIT SEGMENT",
   "lang_segment_details": "SEGMENT DETAILS",
-  "lang_confirm_edit_segment": "Enter your email to edit segment <0>{{segment}}</0>?",
+  "lang_confirm_edit_segment": "Enter your User ID to edit segment <0>{{segment}}</0>?",
   "lang_segment_name_min_max_characters": "Segment name must include 3 - 64 characters",
   "lang_preview_new_segment": "preview new segment",
   "lang_create_segment_successfully": "Create segment successfully",
