replace lang title of popup confirm edit modal

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -63,7 +63,7 @@
   "lang_confirm_code": "Confirm 2FA Code",
   "lang_delete_article_unsuccessfully": "Delete article unsuccessfully",
   "lang_delete_article_successfully": "Delete article  successfully",
-  "lang_enter_your_email_to_delete_article": "Enter your email to delete article",
+  "lang_enter_your_email_to_delete_article": "Enter your User ID to delete article",
   "lang_iress_account": "Your Iress account",
   "lang_traded_securities": "Traded Securities",
   "lang_equities": "Equities",
@@ -226,9 +226,9 @@
   "error_code_5001": "Unable to delete active user",
   "lang_sending_reset_password_success": "Send reset password request successfully",
   "lang_sending_reset_password_request": "Sending reset password request...",
-  "lang_confirm_delete_notification": "Enter your email to delete notification <0>{{notification}}</0>?",
-  "lang_confirm_delete_user": "Enter your email to delete user <0>{{user}}</0>?",
-  "lang_confirm_delete_segment": "Enter your email to delete segment <0>{{segment}}</0>?",
+  "lang_confirm_delete_notification": "Enter your User ID to delete notification <0>{{notification}}</0>?",
+  "lang_confirm_delete_user": "Enter your User ID to delete user <0>{{user}}</0>?",
+  "lang_confirm_delete_segment": "Enter your User ID to delete segment <0>{{segment}}</0>?",
   "lang_confirm_reset_password_for_user": "Do you want to reset password for user login <0>{{user}}</0>?",
   "lang_show_hide_table_columns": "Show/Hide Table Columns",
   "lang_show_columns": "Show Columns",
