--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,4 +1,5 @@
 {
+  "lang_search_app_name": "Search App Name",
   "lang_access_management": "Access Management",
   "lang_do_you_want_to_proceed": "Do you want to proceed?",
   "lang_new_setting": "New Setting",
