update check role routers and menu

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,4 +1,6 @@
 {
+  "lang_preview_edit_access": "Preview Edit Access",
+  "lang_app_access_setup": "App Access Setup",
   "lang_search_app_name": "Search App Name",
   "lang_access_management": "Access Management",
   "lang_do_you_want_to_proceed": "Do you want to proceed?",
