updaate access management

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -280,6 +280,7 @@
   "lang_user_details": "User Details",
   "lang_report": "Report",
   "lang_last_update": "Last Update",
+  "lang_last_updated": "Last Updated",
   "lang_create_time": "Create Time",
   "lang_note": "Note",
   "lang_last_active": "Last Active",
