--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -340,6 +340,8 @@
   "lang_pin_not_match": "PIN did not match. Please try again",
   "lang_confirm_your_new_pin": "Confirm Your New PIN",
   "error_code_ERR_NETWORK": "Network Error",
+  "error_code_110001": "You cannot edit this report right now.",
+  "error_code_110002": "Status of this report cannot be changed to Enable",
   "error_code_150001": "Cannot edit multiple User IDs having different app accesses",
   "error_code_100001": "An unknown error has occurred. Please contact IRESS support",
   "error_code_100002": "An error occurred, please contact your administrator",
