fix validate report before switch to preview form

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,4 +1,5 @@
 {
+  "lang_report_updated_successfully": "Report updated successfully.",
   "lang_textbox": "Textbox",
   "lang_datetime": "Datetime",
   "lang_parameter_name": "Parameter Name",
