--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,4 +1,5 @@
 {
+  "lang_title_max_length_error": "Title must include 1-100 characters",
   "lang_report_updated_successfully": "Report updated successfully.",
   "lang_textbox": "Textbox",
   "lang_datetime": "Datetime",
