--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -44,6 +44,7 @@
   "lang_preview_new_article": "Preview New Article",
   "lang_ok": "Ok",
   "lang_there_is_no_change_in_the_report_information": "There is no change in the report information",
+  "lang_there_is_no_change_in_the_report": "There is no change in the report",
   "lang_file_format_error": "Format errors",
   "lang_field_size_limit_exceeded": "File size limit exceeded",
   "lang_update_report_information_unsuccessfully": "Update report information unsuccessfully",
