--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,4 +1,14 @@
 {
+  "lang_client_category": "Client Category",
+  "lang_user_group": "User Group(s)",
+  "lang_app": "App",
+  "lang_linked_screen": "Linked Screen",
+  "lang_notification_category": "Notification Category",
+  "lang_others": "Others",
+  "lang_products": "Products",
+  "lang_client_events": "Client Events",
+  "lang_site_maintenance": "Site Maintenance",
+  "lang_insights": "Insights",
   "lang_title_max_length_error": "Title must include 1-100 characters",
   "lang_report_updated_successfully": "Report updated successfully.",
   "lang_textbox": "Textbox",
