update article management and add advanced filter

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -9,6 +9,18 @@
   "lang_client_events": "Client Events",
   "lang_site_maintenance": "Site Maintenance",
   "lang_insights": "Insights",
+  "lang_apply": "Apply",
+  "lang_clear_all": "Clear All",
+  "lang_advanced_filter": "Advanced Filter",
+  "lang_draft": "Draft",
+  "lang_scheduled": "Scheduled",
+  "lang_completed": "Completed",
+  "lang_setup_notification": "Setup Notification",
+  "lang_resend_notification": "Resend Notification",
+  "lang_notification_enabled": "Notification Enabled",
+  "lang_article_id": "Article ID",
+  "lang_created_by": "Created By",
+  "lang_last_updated_by": "Last Updated By",
   "lang_title_max_length_error": "Title must include 1-100 characters",
   "lang_report_updated_successfully": "Report updated successfully.",
   "lang_textbox": "Textbox",
