update edit and preview article form

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -4,6 +4,11 @@
   "lang_client_category_id_require": "Please select client category",
   "lang_user_group_require": "Please select user group(s)",
   "lang_app_name_require": "Please select App Name",
+  "lang_ask_confirm_delete_article": "Are you sure want to delete this article?",
+  "lang_publish_with_notification": "Publish with notification",
+  "lang_save_draft": "Save Draft",
+  "lang_title_must_includes_255": "Title must include 1 - 255 characters",
+  "lang_all_apps": "All Apps",
   "lang_client_category": "Client Category",
   "lang_user_group": "User Group(s)",
   "lang_app": "App",
@@ -136,6 +141,7 @@
   "lang_foreign_exchange": "Foreign Exchange",
   "lang_indices": "Indices",
   "lang_security_code": "Security Code",
+  "lang_security_codes": "Security Code(s)",
   "lang_security_type": "Security Type",
   "lang_file_attachment": "File Attachment",
   "lang_thumbnail_image": "Thumbnail image",
