add date range field

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -6,6 +6,13 @@
   "lang_scheduled_time": "Scheduled time",
   "lang_search_by": "Search by",
   "lang_search_by_app_name": "Search by App Name",
+  "lang_modified_by": "Modified By",
+  "lang_function": "Function",
+  "lang_date": "Date",
+  "lang_reset": "Reset",
+  "lang_login": "Login",
+  "lang_action": "Action",
+  "lang_audit_trail": "Audit Trail",
   "lang_linked_screen_require": "Please select linked screen",
   "lang_notification_category_require": "Please select notification  category",
   "lang_client_category_id_require": "Please select client category",
