add page review noti is pup up edit noti.

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,4 +1,5 @@
 {
+  "lang_review_edit_notification": "Preview Edit Notification",
   "lang_recall": "Recall",
   "lang_successful": "Successful",
   "lang_unsuccessful": "Unsuccessful",
