--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -105,6 +105,8 @@
   "lang_funds": "Funds",
   "lang_other": "Other",
   "lang_edit_articles": "Edit Articles",
+  "lang_edit_article": "Edit Article",
+  "lang_preview_edit_article": "Preview Edit Article",
   "lang_articles_details": "Articles Details",
   "Lang_there_is_no_change_in_the_notification": "There is no change in the notification",
   "lang_invalid_url": "Invalid URL",
