--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -359,7 +359,7 @@
   "lang_active": "Active",
   "lang_articles": "Articles",
   "lang_articles_management": "Articles Management",
-  "lang_create_new_article": "Create New Articles",
+  "lang_create_new_article": "Create New Article",
   "lang_segments": "Segments",
   "lang_create_new_segments": "Create New Segment",
   "lang_segments_management": "Segments Management",
