IWM-877 change error message.

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -120,7 +120,7 @@
   "lang_please_choose_image": "Please choose image",
   "lang_please_enter_content": "Please enter content",
   "lang_please_select_schedule_time": "Please select schedule time",
-  "lang_schedule_time_invalid": "Schedule time is invalid",
+  "lang_schedule_time_invalid": "Scheduled time is invalid",
   "lang_please_select_segment": "Please select segment",
   "lang_please_enter_message": "Please enter message",
   "lang_please_enter_title": "Please enter title",
