IWM-880 add popup waring when filter not things change

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,4 +1,5 @@
 {
+  "lang_filter_no_change": "Please input at least one field to apply filter",
   "lang_review_edit_notification": "Preview Edit Notification",
   "lang_recall": "Recall",
   "lang_successful": "Successful",
