--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,5 +1,8 @@
 {
   "lang_filter_no_change": "Please input at least one field to apply filter",
+  "lang_required_draft_change": "Please input at least one field to save as draft",
+  "lang_draft_save_successfully": "Draft saved successfully",
+  "lang_save_draft_unsuccessfully": "Saved draft unsuccessfully",
   "lang_review_edit_notification": "Preview Edit Notification",
   "lang_recall": "Recall",
   "lang_successful": "Successful",
