--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -415,12 +415,21 @@
   "error_code_USER_NOT_EXIST": "",
   "error_code_INVALID_SEGMENTATION": "",
   "error_code_INVALID_NOTIFICATION": "",
-  "error_code_INVALID_NOTIFICATION_STATUS": "",
+  "error_code_INVALID_NOTIFICATION_STATUS": "You do not have access to selected client category(s)",
+  "error_code_INVALID_USER_GROUP": "You do not have access to selected user group(s)",
+  "error_code_INVALID_CLIENT_CATEGORY_ID": "You do not have access to selected client category(s)",
   "error_code_100004": "Incorrect Password or User Login. Please make sure your details are correct and try again",
   "error_code_100005": "Display the pop-up requires to enter 2FA code",
   "error_code_100006": "Your account has been deactivated. Please contact your administrator",
   "error_code_100007": "The 2FA code is incorrect",
   "error_code_100000": "Your session has expired",
+  "error_code_160000": "You cannot create this notification right now",
+  "error_code_160001": "You cannot edit this notification right now",
+  "error_code_160002": "You cannot delete this notification right now",
+  "error_code_160003": "Create notification unsuccessfully",
+  "error_code_160004": "Update notification unsuccessfully",
+  "error_code_160005": "Recall notification unsuccessfully",
+
   "error_code_rate_limit": "API rate limit exceeded",
   "error_code_undefined": "Something went wrong from systems!",
   "error_code_TOKEN_WAS_CHANGED": "You have been signed out due to changing password!",
