update save draft

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,4 +1,5 @@
 {
+  "lang_preview_draft_article": "Preview Draft Article",
   "lang_filter_no_change": "Please input at least one field to apply filter",
   "lang_required_draft_change": "Please input at least one field to save as draft",
   "lang_draft_save_successfully": "Draft saved successfully",
