prevent color button clear data in filter noti

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -15,7 +15,7 @@
   "lang_to": "To",
   "lang_scheduled_time": "Scheduled time",
   "lang_search_by": "Search by",
-  "lang_search_by_app_name": "Search by App Name",
+  "lang_search_by_app_name": "Search by app Name",
   "lang_modified_by": "Modified By",
   "lang_function": "Function",
   "lang_date": "Date",
