--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -15,7 +15,7 @@
   "lang_to": "To",
   "lang_scheduled_time": "Scheduled time",
   "lang_search_by": "Search by",
-  "lang_search_by_app_name": "Search by app Name",
+  "lang_search_by_app_name": "Search by App Name",
   "lang_modified_by": "Modified By",
   "lang_function": "Function",
   "lang_date": "Date",
@@ -27,7 +27,7 @@
   "lang_notification_category_require": "Please select notification  category",
   "lang_client_category_id_require": "Please select client category",
   "lang_user_group_require": "Please select user group(s)",
-  "lang_app_name_require": "Please select App Name",
+  "lang_app_name_require": "Please select app name",
   "lang_ask_confirm_delete_article": "Are you sure want to delete this article?",
   "lang_publish_with_notification": "Publish with notification",
   "lang_save_draft": "Save Draft",
