--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,6 +1,7 @@
 {
   "lang_preview_draft_article": "Preview Draft Article",
-  "lang_filter_no_change": "Please input at least one field to apply filter",
+  "lang_filter_no_change": "There is no change in the filter",
+  "lang_filter_invalid": "Please input at least one field to apply filter",
   "lang_required_draft_change": "Please input at least one field to save as draft",
   "lang_draft_save_successfully": "Draft saved successfully",
   "lang_save_draft_unsuccessfully": "Saved draft unsuccessfully",
