IWM-913 fix  unspelling

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -125,7 +125,7 @@
   "lang_please_select_security_type": "Please select security type",
   "lang_please_choose_image": "Please choose image",
   "lang_please_enter_content": "Please enter content",
-  "lang_please_select_schedule_time": "Please select schedule time",
+  "lang_please_select_schedule_time": "Please select scheduled time",
   "lang_schedule_time_invalid": "Scheduled time is invalid",
   "lang_please_select_segment": "Please select segment",
   "lang_please_enter_message": "Please enter message",
@@ -202,7 +202,7 @@
   "lang_hours": "Hours",
   "lang_instant": "Instant",
   "lang_direct": "Direct",
-  "lang_schedule_time": "Schedule time",
+  "lang_schedule_time": "Scheduled time",
   "lang_preview_new_notifications": "preview new notifications",
   "lang_expire": "Expire",
   "lang_type_url": "Type URL",
@@ -211,7 +211,7 @@
   "lang_update_segment_successfully": "The segment information has been updated successfully",
   "lang_update_segment_unsuccessfully": "Unable to update segment information",
   "lang_field_required": "Please fill in this field",
-  "lang_schedule_time_required": "Schedule time is required",
+  "lang_schedule_time_required": "Scheduled time is required",
   "lang_validate_message": "Message must include 1 - 192 characters",
   "lang_message_required": "Message is required",
   "lang_validate_title": "Title must include 1-64 characters",
@@ -289,7 +289,7 @@
   "lang_entity_id": "Entity Id",
   "lang_url": "Url",
   "lang_expiration_time": "Expiration Time",
-  "lang_schedule": "Schedule",
+  "lang_schedule": "Scheduled",
   "lang_trigger_time": "Trigger Time",
   "lang_attempted": "Attempted",
   "lang_delivered": "Delivered",
@@ -410,7 +410,7 @@
   "error_code_100001": "An unknown error has occurred. Please contact IRESS support",
   "error_code_100002": "An error occurred, please contact your administrator",
   "error_code_100003": "You have been logged out as you have lost your session",
-  "error_code_INVALID_TIME": "Expiration time must be larger than schedule time",
+  "error_code_INVALID_TIME": "Expiration time must be larger than scheduled time",
   "error_code_INVALID_ARGUMENT": "Unfortunately, we cannot process your request right now. Please try again late",
   "error_code_INVALID_TOKEN": "{{count}} Failed PIN Attempt",
   "error_code_2001": "Please enter full name",
