upate text enabled disabled

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -186,7 +186,9 @@
   "lang_report_type": "Report Type",
   "lang_template_id": "Template ID",
   "lang_disabled": "Disabled",
+  "lang_disable": "Disable",
   "lang_enabled": "Enabled",
+  "lang_enable": "Enable",
   "lang_disabled_for_all": "Disabled for all",
   "lang_enabled_for_all": "Enable for all",
   "lang_creating_pin_request_has_expired": "Creating PIN request has expired",
