--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -344,7 +344,7 @@
   "lang_api_access": "Api Access",
   "lang_user_login": "User Login",
   "lang_full_name": "Full Name",
-  "lang_sitename": "Sitename",
+  "lang_sitename": "Site Name",
   "lang__required": "Full name is required",
   "lang_user_login_required": "User login is required",
   "lang_site_name_required": "Sitename is required",
