--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,4 +1,8 @@
 {
+  "lang_from_date_error_greater_to_date": "From date must be equal or smaller than To date",
+  "lang_to_date_error_smaller_to_date": "To date must be equal or greater than From date",
+  "lang_from_date_is_invalid": "From date is invalid",
+  "lang_to_date_is_invalid": "To date is invalid",
   "lang_recall_notification_successfully": "Recall notification successfully",
   "lang_recall_notification_unsuccessfully": "Recall notification unsuccessfully",
   "lang_preview_draft_article": "Preview Draft Article",
@@ -346,7 +350,7 @@
   "lang_api_access": "Api Access",
   "lang_user_login": "User Login",
   "lang_full_name": "Full Name",
-  "lang_sitename": "Site Name",
+  "lang_sitename": "Sitename",
   "lang__required": "Full name is required",
   "lang_user_login_required": "User login is required",
   "lang_site_name_required": "Sitename is required",
@@ -408,7 +412,9 @@
   "lang_pin_not_match": "PIN did not match. Please try again",
   "lang_confirm_your_new_pin": "Confirm Your New PIN",
   "error_code_ERR_NETWORK": "Network Error",
-  "error_code_110001": "You cannot edit this report right now.",
+  "error_code_120004": "You cannot delete this article right now",
+  "error_code_120002": "You cannot create this article right now",
+  "error_code_110001": "You cannot edit this report right now",
   "error_code_110002": "Status of this report cannot be changed to Enable",
   "error_code_150001": "Cannot edit multiple User IDs having different app accesses",
   "error_code_100001": "An unknown error has occurred. Please contact IRESS support",
