add check validate date time

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -3,6 +3,9 @@
   "lang_to_date_error_smaller_to_date": "To date must be equal or greater than From date",
   "lang_from_date_is_invalid": "From date is invalid",
   "lang_to_date_is_invalid": "To date is invalid",
+  "lang_invalid_from_to": "To date must be equal or greater than From date",
+  "lang_to_invalid": "To date is invalid",
+  "lang_from_invalid": "From date is invalid",
   "lang_recall_notification_successfully": "Recall notification successfully",
   "lang_recall_notification_unsuccessfully": "Recall notification unsuccessfully",
   "lang_preview_draft_article": "Preview Draft Article",
