update app name

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -99,7 +99,7 @@
   "lang_session_is_about_to_expired": "Your session is about to expire after {{time}} minutes.<br/>Do you want to stay signed in?",
   "error_code_900000": "An error occurred, please contact your administrator",
   "error_dont_have_permission": "You don’t have permission to access to IRESS CMS. Please contact your advisor for more detail.",
-  "lang_sign_in_to_access_to_Iress_CMS_portal": "Click “Sign in” to access to Iress CMS portal",
+  "lang_sign_in_to_access_to_Iress_CMS_portal": "Click “Sign in” to access to Iress Wealth App Admin",
   "lang_noti_has_been_sent": "The notification has been sent. You are unable to edit this notification",
   "lang_edit_user": "Edit User",
   "lang_enter_your_email_to_edit_article": "Enter your User ID to edit article",
@@ -387,7 +387,7 @@
   "lang_create_new_user": "Create New User",
   "lang_user_management": "User Management",
   "lang_sign_in_to_your_account": "Sign In To Your Account",
-  "lang_cms_portal": "CMS PORTAL",
+  "lang_cms_portal": "Wealth App Admin",
   "lang_sign_in": "Sign In",
   "lang_sign_out": "Sign Out",
   "lang_email": "Email",
