--- a/src/locales/vn.json
+++ b/src/locales/vn.json
@@ -57,7 +57,7 @@
   "lang_create_new_user": "Create New User",
   "lang_user_management": "User Management",
   "lang_sign_in_to_your_account": "Sign In To Your Account",
-  "lang_cms_portal": "CMS PORTAL",
+  "lang_cms_portal": "Wealth App Admin",
   "lang_sign_in": "SIGN IN",
   "lang_email": "Email",
   "lang_email_invalid": "Invalid email",
