update some text

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -40,7 +40,7 @@
   "lang_client_category_id_require": "Please select client category",
   "lang_user_group_require": "Please select user group(s)",
   "lang_app_name_require": "Please select app name",
-  "lang_ask_confirm_delete_article": "Are you sure want to delete this article?",
+  "lang_ask_confirm_delete_article": "Article will be deleted permanently and cannot be restored. Do you want to proceed?",
   "lang_publish_with_notification": "Publish with notification",
   "lang_save_draft": "Save Draft",
   "lang_title_must_includes_255": "Title must include 1 - 255 characters",
@@ -420,7 +420,7 @@
   "error_code_120004": "You cannot delete this article right now",
   "error_code_120002": "You cannot create this article right now",
   "error_code_110001": "You cannot edit this report right now",
-  "error_code_110002": "Status of this report cannot be changed to Enable",
+  "error_code_110002": "Report cannot be enabled",
   "error_code_150001": "Cannot edit multiple User IDs having different app accesses",
   "error_code_100001": "An unknown error has occurred. Please contact IRESS support",
   "error_code_100002": "An error occurred, please contact your administrator",
