fix: message update portfolio indicator

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,4 +1,5 @@
 {
+  "lang_update_portfolio_successfully": "Update portfolio performance indicator successfully",
   "lang_delete_article": "Delete article",
   "lang_notification_id": "Notification ID",
   "lang_access_updated_successfully": "Access updated successfully",
